<resources>
    <string name="app_name">Magasin</string>
    <string name="title_activity_login">Sign in</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">password</string>
    <string name="connexion">Connexion</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="anuuler">Anuuler</string>
    <string name="valider">valider</string>
    <string name="todo">TODO</string>
    <string name="title_activity_acceuil">AcceuilActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
