<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mma"
    tools:context="com.example.user.magasin.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/editText5"
        android:layout_marginStart="18dp"
        android:layout_marginTop="21dp"
        android:text="@string/valider"
        android:textColor="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        app:srcCompat="@drawable/inscription" android:contentDescription="@string/todo" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginEnd="15dp"
        android:text="@string/anuuler"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="text"
        android:textColorLink="@android:color/background_light" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/pr_nom"
        android:inputType="text"
        android:textColorLink="@android:color/background_light" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:textColorLink="@android:color/background_light" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText3"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textEmailAddress"
        android:textColorLink="@android:color/background_light" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="number"
        android:textColorLink="@android:color/background_light" />


</RelativeLayout>
